last exercise from flexbox

--- a/09.Exercise-CSS-Box-Model-Floats-and-Flexbox/36_L4_E4_Media-query-less-layout-using-flexbox/Solution/index.html
+++ b/09.Exercise-CSS-Box-Model-Floats-and-Flexbox/36_L4_E4_Media-query-less-layout-using-flexbox/Solution/index.html
@@ -8,6 +8,11 @@
     <title>Media Query Less Layout Using Flexbox</title>
 </head>
 <body>
-<header>Header</header>
+<header>HEADER</header>
+<main>
+    <section>MAIN</section>
+    <aside>ASIDE</aside>
+</main>
+<footer>FOOTER</footer>
 </body>
 </html>
