--- a/Exam-Prep-II/01. The-Three-Monkeys/index.html
+++ b/Exam-Prep-II/01. The-Three-Monkeys/index.html
@@ -8,6 +8,33 @@
     <title>Three-Monkeys</title>
 </head>
 <body>
-
+<main>
+    <article>
+        <img src="./img/monkey.png" alt="monkey">
+        <h2>SEE NO EVIL</h2>
+        <p>I became fascinated with the concept of speak no, see no, hear no evil. And - and the actual depiction of
+            three wise monkeys. And I began collecting it over the years. And I kind of figured that I might be the -
+            the fourth monkey, the feel no evil monkey.
+        </p>
+        <span>Mackenzie Phillips</span>
+    </article>
+    <article>
+        <img src="./img/monkey2.png" alt="monkey">
+        <h2>HEAR NO EVIL</h2>
+        <p>Ideas come from ordinary, everyday life. And from imagination. And from feelings. And from memories. Memories
+            of dust in my sneakers and humming whitewalls down a hill called Monkey.
+        </p>
+        <span>Jerry Spinelli</span>
+    </article>
+    <article>
+        <img src="./img/monkey1.png" alt="monkey">
+        <h2>SPEAK NO EVIL</h2>
+        <p>It is not so important to be serious as it is to be serious about the important things. The monkey wears an
+            expression of seriousness which would do credit to any college student, but the monkey is serious because he
+            itches.
+        </p>
+        <span>Robert M. Hutchins</span>
+    </article>
+</main>
 </body>
 </html>
